"ChangeLog"

2006-01-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-73-merged-prsim-00-34:
	  Merge to trunk.


2006-01-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-33-merged-PRS-03-02:
	  Branch merge.  


2006-01-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-PRS-03-02:
	  chapters/PRS.tex: proposed attribute and macro extensions
		to the PRS language.  


2006-01-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-prsim-00-27:
	  Long time no write!
	  Added sections discussing template parameter lookup
		in the templates chapter.  Argument for excluding
		template formal parameters from member lookups.
	  This is all relevant to the current development of 
		member lookups w.r.t. typedefs.  


2005-12-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-72-merged-rename-00-06:
	  Merge from rename-00 branch.  


2005-10-25	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-61-merged-PRS-02-11:
	  Some notes on defect reports to resolve in the language.  


2005-06-19	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-44:
	  Added documentation for channel types, CHP and PRS.  
	  Some useful macros were added to "artxx.tex".  


2005-05-01	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-27-template-01-04:
	  Added examples of using strict and relaxed parameters with arrays.  
	  Outlined section on complex aggregate references in "arrays.tex".


2005-04-28	David Fang		<fangism@users.sourceforge.net>

	* Minor clarifications about types.  


2005-04-19	David Fang		<fangism@users.sourceforge.net>

	* More notes on template definitions, specializations.  


2005-04-18	David Fang		<fangism@users.sourceforge.net>

	* Added much discussion and notes on the issues with template
	  specializations.  
