@@ -1,0 +1,12 @@
+% "chapters/SPEC.tex"
+%	$Id: SPEC.tex,v 1.1 2006/02/04 19:55:57 fang Exp $
+
+\chapter{SPEC Directives}
+\label{sec:spec}
+
+This chapter describes the various directives available
+in the \ttt{spec} sub-language.  
+
+Someone should write the various spec directives up, ahem!
+
+
