@@ -1,6 +1,6 @@
 % "hac.tex"
 
-%	$Id: hac.tex,v 1.3 2006/01/22 06:52:50 fang Exp $
+%	$Id: hac.tex,v 1.4 2006/02/04 19:55:55 fang Exp $
 
 \documentclass[12pt]{book}
 
@@ -132,6 +132,7 @@
 \input chapters/linkage
 \input chapters/CHP
 \input chapters/PRS
+\input chapters/SPEC
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
