@@ -1,0 +1,9 @@
+globID	super		localID	canonical	footprint-frame
+[global process entries]
+1	(top)	-	1	tester	testing<>
+	bool: 1,2,3,4
+[global bool entries]
+1	process	1	1	tester.p	
+2	process	1	2	tester.q	
+3	process	1	3	tester.r	
+4	process	1	4	tester.s	
