@@ -1,2 +1,4 @@
+"tester.p" & "tester.q" -> "tester.s"-
+~"tester.p" | ~"tester.q" -> "tester.s"+
 mk_exclhi("tester.p", "tester.q", "tester.r")
 mk_exclhi("tester.r", "tester.s")
