@@ -7,7 +7,7 @@ Persistent Object Manager text dump:
 	3	##ADDR##	proccoll	0	#HEAD#	#TAIL#	56
 	4	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
 	5	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
-	6	##ADDR##	procdefn	0	#HEAD#	#TAIL#	220
+	6	##ADDR##	procdefn	0	#HEAD#	#TAIL#	228
 	7	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	35
 	8	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
 	9	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
@@ -18,23 +18,36 @@ Persistent Object Manager text dump:
 	14	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
 	15	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	35
 	16	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
-	17	##ADDR##	SPCdrctv	0	#HEAD#	#TAIL#	37
-	18	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
-	19	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
-	20	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
-	21	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
-	22	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	17	##ADDR##	PRSpuldn	0	#HEAD#	#TAIL#	21
+	18	##ADDR##	PRSand__	0	#HEAD#	#TAIL#	20
+	19	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	20	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	21	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	22	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
 	23	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
-	24	##ADDR##	SPCdrctv	0	#HEAD#	#TAIL#	33
-	25	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
-	26	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	24	##ADDR##	PRSpulup	0	#HEAD#	#TAIL#	21
+	25	##ADDR##	PRSor___	0	#HEAD#	#TAIL#	20
+	26	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
 	27	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
-	28	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
-	29	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
-	30	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
-	31	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
-	32	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
-	33	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
+	28	##ADDR##	PRSnot__	0	#HEAD#	#TAIL#	12
+	29	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	30	##ADDR##	SPCdrctv	0	#HEAD#	#TAIL#	37
+	31	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	32	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	33	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	34	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	35	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	36	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	37	##ADDR##	SPCdrctv	0	#HEAD#	#TAIL#	33
+	38	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	39	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	40	##ADDR##	PRSlitrl	0	#HEAD#	#TAIL#	12
+	41	##ADDR##	sdbmref_	0	#HEAD#	#TAIL#	20
+	42	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	43	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	44	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	45	##ADDR##	dboolcol	0	#HEAD#	#TAIL#	30
+	46	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
 
 In module created from: ##FILE## (unrolled)
 In namespace "", we have: {
@@ -57,6 +70,9 @@ In namespace "", we have: {
         bool<> q
         bool<> r
         bool<> s
+      prs:
+        p & q -> s-
+        ~p | ~q -> s+
       spec:
         mk_exclhi(p,q,r)
         mk_exclhi(r,s)
