@@ -1,5 +1,11 @@
 "ChangeLog"
 
+2006-02-04	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-76-9:
+	  Added blank chapter for SPEC directives.  
+
+
 2006-01-22	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-73-merged-prsim-00-34:
